wip(vertx-jooq): select with vertx-jooq
